--- a/_inc/assets/css/style.css
+++ b/_inc/assets/css/style.css
@@ -1,6 +1,7 @@
 /*
 **Dashboard
 */
+
 .cs_wrapper{
     margin: 10px;
     padding: 10px;
@@ -54,5 +55,20 @@
    color: white;
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
+}
 
+.info-cntr{
+    display: flex;
+    background-color:  #f0f0f0;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 10px;
+    width: 60%;
+    flex-direction: row;
+    padding: 10px 10px 0;
+}
+
+.info-cntr > img {
+    width: 20px;
+    height: 20px;
+    margin-top: 10px;
+    padding-right: 5px;
 }
