--- a/_inc/assets/css/style.css
+++ b/_inc/assets/css/style.css
@@ -13,27 +13,12 @@
     display: flex;
     flex-direction: column;
     /*align-items: center;*/
-    margin-top: 35px;
 }
 
 
 /*
 *** Modal
 */
-.cs_modal{
-   /* position: fixed;
-    background: rgba(0,0,0,0);
-    z-index: 99999;
-    display: block;
-    top: 0;
-	right: 0;
-	bottom: 0;
-    left: 0;*/
-    max-width: 50%;    
-    align-self: center;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-}
 #cs_onboard{
     /*position: relative;
     top: -1000px;
@@ -70,5 +55,8 @@
     width: 20px;
     height: 20px;
     margin-top: 10px;
-    padding-right: 5px;
+    
+}
+.info-cntr > p{
+    padding-left: 10px;
 }
